syntax = "proto3";

package turboengine.v1;

option go_package = "github.com/lennyburdette/turbo-engine/specs/gen/go/turboengine/v1";

import "turboengine/v1/package.proto";

// --- Kubernetes Operator CRD Spec ---
// These messages mirror the CRD spec that the K8s operator watches.
// They are defined in protobuf so the CRD schema, Go types, and
// documentation are all generated from a single source of truth.

// APIGraph is the top-level CRD representing a deployed dependency tree.
message APIGraphSpec {
  string environment_id = 1;
  string build_id = 2;

  // The root package and resolved tree.
  string root_package = 3;
  repeated DeployedComponent components = 4;

  // Gateway/ingress configuration.
  IngressSpec ingress = 5;
}

// DeployedComponent represents one package deployed as part of the graph.
message DeployedComponent {
  string package_name = 1;
  string package_version = 2;
  PackageKind kind = 3;

  // Artifact hash driving this deployment.
  string artifact_hash = 4;

  // Runtime configuration.
  ComponentRuntime runtime = 5;
}

message ComponentRuntime {
  int32 replicas = 1;
  ResourceRequirements resources = 2;
  map<string, string> env = 3;
  map<string, string> annotations = 4;
}

message ResourceRequirements {
  string cpu_request = 1;
  string cpu_limit = 2;
  string memory_request = 3;
  string memory_limit = 4;
}

message IngressSpec {
  string host = 1;
  repeated IngressRoute routes = 2;
  TLSConfig tls = 3;
}

message IngressRoute {
  string path = 1;
  string target_component = 2;
  int32 target_port = 3;
}

message TLSConfig {
  string secret_name = 1;
  bool auto_cert = 2;
}

// APIGraphStatus is the observed state written by the operator.
message APIGraphStatus {
  string phase = 1; // Pending, Deploying, Running, Degraded, Failed
  repeated ComponentStatus component_statuses = 2;
  string preview_url = 3;
  string message = 4;
}

message ComponentStatus {
  string package_name = 1;
  string phase = 2; // Pending, Running, Failed
  int32 ready_replicas = 3;
  int32 desired_replicas = 4;
  string message = 5;
}
